# alsvinn

./: .astylerc  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  CMakeLists.txt  README.md  _config.yml
addons/fbm/: CMakeLists.txt
addons/qmc/: CMakeLists.txt
alsfvm/: CMakeLists.txt  make_class.py
alsfvm/include/alsfvm/: Configuration.hpp  DeviceConfiguration.hpp  gpu_array.hpp  mat.hpp  types.hpp  vec.hpp  vec1.hpp  vec2.hpp  vec3.hpp  vec4.hpp  vec5.hpp  vec6.hpp
alsfvm/src/: DeviceConfiguration.cpp
alsfvm/src/boundary/: Boundary.cpp  BoundaryCPU.cpp  BoundaryCUDA.cu  BoundaryFactory.cpp  NeumannCPU.cpp  Type.cpp  ValueAtBoundary.cpp
alsfvm/src/config/: GenericParameters.cpp  SimulatorSetup.cpp  XMLParser.cpp
alsfvm/src/cuda/: CudaBuffer.cpp  CudaBuffer1D.cpp  CudaBuffer2D.cpp  CudaBuffer3D.cpp  CudaMemory.cpp  vector_operations.cu
alsfvm/src/diffusion/: DiffusionFactory.cpp  DiffusionOperator.cpp  NoDiffusion.cpp  RusanovMatrix.cpp  TecnoDiffusionCPU.cpp  TecnoDiffusionCUDA.cu
alsfvm/src/equation/: CPUCellComputer.cpp  CUDACellComputer.cu  CellComputer.cpp  CellComputerFactory.cpp  EquationInformation.cpp  EquationParameterFactory.cpp  EquationParameters.cpp  Euler.cpp
alsfvm/src/functional/: BoundedVariation.cpp  Functional.cpp  FunctionalFactory.cpp  Identity.cpp  IdentityCUDA.cu  IntervalFunctionalWriter.cpp  Legendre.cpp  LegendrePointWise.cpp  LegendrePointWiseCUDA.cu  LogEntropy.cpp  LogEntropyCUDA.cu  Moment.cpp  StructureBase.cpp  StructureCube.cpp  StructureCubeCUDA.cu  TimeIntegrationFunctional.cpp
alsfvm/src/grid/: Grid.cpp
alsfvm/src/init/: InitialData.cpp  Parameters.cpp  PythonInitialData.cpp
alsfvm/src/integrator/: ForwardEuler.cpp  Integrator.cpp  IntegratorFactory.cpp  RungeKutta2.cpp  RungeKutta3.cpp  RungeKutta4.cpp  System.cpp  TimestepAdjuster.cpp  WaveSpeedAdjuster.cpp
alsfvm/src/io/: CoarseGrainingIntervalWriter.cpp  DLLWriter.cpp  FixedIntervalWriter.cpp  HDF5MPIWriter.cpp  HDF5Writer.cpp  MpiWriterFactory.cpp  NetCDFMPIWriter.cpp  NetCDFWriter.cpp  Parameters.cpp  PythonScript.cpp  QueueWriter.cpp  TimeIntegratedWriter.cpp  Writer.cpp  WriterFactory.cpp  io_utils.cpp  netcdf_write_attributes.cpp  netcdf_write_report.cpp  parallel_netcdf_write_attributes.cpp  parallel_netcdf_write_report.cpp
alsfvm/src/memory/: HostMemory.cpp  Memory.cpp  MemoryBase.cpp  MemoryFactory.cpp
alsfvm/src/mpi/: CartesianCellExchanger.cpp  CellExchanger.cpp  Configuration.cpp  CudaCartesianCellExchanger.cu  MpiIndexType.cpp  Request.cpp  RequestContainer.cpp
alsfvm/src/numflux/: Central.cpp  LaxFriedrichs.cpp  NumericalFlux.cpp  NumericalFluxCPU.cpp  NumericalFluxCUDA.cu  NumericalFluxFactory.cpp  Rusanov.cpp  ScalarEntropyConservativeFlux.cpp  TecnoCombined4.cpp  TecnoCombined6.cpp
alsfvm/src/python/: PythonInterpreter.cpp
alsfvm/src/reconstruction/: ENOCPU.cpp  ENOCUDA.cu  ENOCoefficients.cpp  MC.cpp  MM.cpp  NoReconstruction.cpp  NoReconstructionCUDA.cu  Reconstruction.cpp  ReconstructionCPU.cpp  ReconstructionCUDA.cu  ReconstructionFactory.cpp  WENO2.cpp  WENO2CUDA.cu  WENOCPU.cpp  WENOCUDA.cu  WENOCoefficients.cpp  WENOF2.cpp
alsfvm/src/simulator/: AbstractSimulator.cpp  ConservedSystem.cpp  Simulator.cpp  SimulatorParameters.cpp  TimestepInformation.cpp
alsfvm/src/volume/: EulerConservedVolume.cpp  EulerExtraVolume.cpp  EulerPrimitiveVolume.cpp  Volume.cpp  VolumeFactory.cpp  VolumePair.cpp
alsuq/: CMakeLists.txt  make_class.py
alsuq/include/alsuq/: types.hpp
alsuq/src/config/: Setup.cpp
alsuq/src/distribution/: DLLDistribution.cpp  Distribution.cpp  DistributionFactory.cpp  FunctionDistribution.cpp  Normal.cpp  Parameters.cpp  Uniform.cpp  Uniform1D.cpp
alsuq/src/generator/: Generator.cpp  GeneratorFactory.cpp  Normal.cpp  Parameters.cpp  STLMersenne.cpp  Uniform.cpp  Well512A.cpp
alsuq/src/io/: MPIWriterFactory.cpp
alsuq/src/mpi/: Config.cpp  Configuration.cpp  SimpleLoadBalancer.cpp
alsuq/src/run/: FiniteVolumeSimulatorCreator.cpp  Runner.cpp  SimulatorCreator.cpp
alsuq/src/samples/: SampleGenerator.cpp
alsuq/src/stats/: BoundedVariation.cpp  BoundedVariationDirection.cpp  FixedIntervalStatistics.cpp  FunctionalStatistics.cpp  MeanVariance.cpp  OnePointMoment.cpp  Statistics.cpp  StatisticsFactory.cpp  StatisticsHelper.cpp  StatisticsParameters.cpp  StatisticsTimer.cpp  (+9 more)
alsuqcli/: CMakeLists.txt
alsuqcli/src/: main.cpp
alsutils/: CMakeLists.txt  make_class.py
alsutils/src/: config.cpp.in  get_cpu_name.cpp  get_hostname.cpp  get_os_name.cpp  get_python_version.cpp  get_standard_c_library.cpp  get_username.cpp  make_basic_report.cpp  write_run_report.cpp
alsvinncli/: CMakeLists.txt
alsvinncli/src/: main.cpp
documentation/: CMakeLists.txt  Doxyfile  Doxyfile_readthedocs
documentation/doxygen/: Doxyfile
documentation/sphinx/: conf.py
mpi_test/: CMakeLists.txt  run_mpi_tests.sh.in
mpi_test/src/: do_serial.hpp  main.cpp
python/: CMakeLists.txt  README.md  generate.py
python/alsvinn/: __init__.py  alsvinn.py  config.py.in  config_install.py.in
python/test/: test_commit_sha.py  test_number_of_saves.py  test_python_interface.py  test_text_cache.py
system_test/: CMakeLists.txt
system_test/src/: EulerTest.cpp  main.cpp
test/: CMakeLists.txt
test/mpi_test/: CMakeLists.txt  README.md  run_mpi_tests.sh.in
test/src/: BoundaryTest.cpp  BurgersFluxTest.cpp  BurgersReconstructionConvergenceTest.cpp  BurgersWenoTest.cpp  CUDABoundaryTest.cpp  CUDABoundaryTest.cu  CUDAEnoTest.cpp  CUDANumericalFluxTest.cpp  CUDANumericalFluxTest.cu  CUDAWenoTest.cpp  EnoTest.cpp  EquationListTest.cpp  EulerEigenVectorTest.cpp  EulerEquationTest.cpp  ForwardEulerTest.cpp  GridTest.cpp  HDF5CudaTest.cpp  HDF5WriterTest.cpp  HLLTest.cpp  IOTest.cpp  MatrixTests.cpp  MemoryFactoryTest.cpp  MemoryTest.cpp  PolyfitTest.cpp  PythonInitialDataTest.cpp  ReconstructionConvergenceTest.cpp  RungeKutta2Test.cpp  TecnoDiffusionTest.cpp  TecnoTest.cpp  TestExtraComputation.cpp  VolumeForEachTest.cpp  VolumeTest.cpp  VolumeViewTest.cpp  WenoTest.cpp  main.cpp  numericalfluxtest.cpp
test/system_test/: CMakeLists.txt
(+618 files in other folders)
